[3-FrontEnd-2] Se agregó la página de historial de órdenes

--- a/e-collective-front-end/src/app/about-us/about-us.page.scss
+++ b/e-collective-front-end/src/app/about-us/about-us.page.scss
@@ -8,8 +8,8 @@ ion-title {
     color: white;
 }
 
-ion-toolbar {
-    --background: #050446;
+.toolbar1{
+    --background:#131635;
 }
 
 ion-content {
