--- a/e-collective-front-end/src/app/locations/locations.page.scss
+++ b/e-collective-front-end/src/app/locations/locations.page.scss
@@ -8,13 +8,13 @@ ion-title {
     color: white;
 }
 
-ion-toolbar {
-    --background: #050446;
-}
-
 ion-menu-button {
     color: white;
   }
+
+  .toolbar1{
+    --background:#131635;
+}
 
   .logo{
     height: 100px;
