--- a/e-collective-front-end/src/app/product-details/product-details.page.scss
+++ b/e-collective-front-end/src/app/product-details/product-details.page.scss
@@ -1,6 +1,13 @@
-ion-toolbar {
-    --background: #050446;
-  }
+.toolbar1{
+  --background:#131635;
+}
+
+.logo{
+  height: 100px;
+  width: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+}
   
   ion-title {
     color: white;
