--- a/e-collective-front-end/src/app/faq/faq.page.scss
+++ b/e-collective-front-end/src/app/faq/faq.page.scss
@@ -8,8 +8,8 @@ ion-title {
     color: white;
 }
 
-ion-toolbar {
-    --background: #050446;
+.toolbar1{
+    --background:#131635;
 }
 
 ion-content {
