--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -56,9 +56,12 @@
           <ion-button class="superSlim" fill="clear" mode="ios" [routerLink]="['../contact']"  >
             <ion-label color="light">Contáctenos</ion-label>
           </ion-button>
-            <ion-button class="superSlim" *ngIf = "this.usuario && (this.usuario.rol == 1 || this.usuario.rol == 2)" fill="clear" mode="ios" [routerLink]="['../admin-user']"  >
-              <ion-label color="light">Administrar</ion-label>
-            </ion-button>
+          <ion-button class="superSlim" fill="clear" mode="ios" [routerLink]="['../order-history']"  >
+            <ion-label color="light">Historial de compras</ion-label>
+          </ion-button>
+          <ion-button class="superSlim" *ngIf = "this.usuario && (this.usuario.rol == 1 || this.usuario.rol == 2)" fill="clear" mode="ios" [routerLink]="['../admin-user']"  >
+            <ion-label color="light">Administrar</ion-label>
+          </ion-button>
         </div>
       </ion-col>
     </ion-row>
