--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -40,7 +40,7 @@
             </ion-col>                   
                      
             <ion-col size="3" class = "ion-align-self-center">
-              {{ p.quantity * p.price - (0.01 *p.discount)*p.price | currency:'₡' }}
+              {{ p.quantity * (p.price - (0.01 *p.discount)*p.price) | currency:'₡' }}
             </ion-col>
 
           </ion-row>
