--- a/e-collective-front-end/src/app/login/login.page.html
+++ b/e-collective-front-end/src/app/login/login.page.html
@@ -34,7 +34,7 @@
       <h3 class="top-margin" style="color: black">¿Eres nuevo en E-Collective?</h3>
 
       <ion-button style="max-height: 30px;" fill="clear" mode="ios" expand="full" (click)="onClickRegister()">Registrarme</ion-button>
-      <ion-button style="max-height: 30px;" fill="clear" mode="ios" expand="full" href="/">Volver al inicio</ion-button>
+      <ion-button style="max-height: 30px;" fill="clear" mode="ios" expand="full" [routerLink]="['../home']">Volver al inicio</ion-button>
 
     </ion-card-content>
 
