--- a/e-collective-front-end/src/app/order-history/order-history.page.html
+++ b/e-collective-front-end/src/app/order-history/order-history.page.html
@@ -7,7 +7,7 @@
       <img src="\assets\images\e-collectiveWG.png" class="logo">
     </a>
     
-    <ion-title>Mi historial de órdenes</ion-title>
+    <ion-title>Mi historial de compras</ion-title>
         <ion-buttons slot="start">
           <ion-button slot="end" fill="clear" mode="ios" [routerLink]="['../home']"  >
             <ion-label color="light"><u>Volver al inicio</u></ion-label>
