--- a/e-collective-front-end/src/app/register/register.page.html
+++ b/e-collective-front-end/src/app/register/register.page.html
@@ -70,9 +70,9 @@
       <div class="a-row" style="text-align: center">
         <ion-text style="color:black;">
           ¿Ya tienes una cuenta?
-          <a class="a-link-emphasis" href='/login'>Iniciar sesión</a>
+          <a class="a-link-emphasis" [routerLink]="['../login']">Iniciar sesión</a>
           o
-          <a class="a-link-emphasis" href='/'>Volver al inicio</a>
+          <a class="a-link-emphasis" [routerLink]="['../home']">Volver al inicio</a>
         </ion-text>
 
       </div>
