--- a/e-collective-front-end/src/global.scss
+++ b/e-collective-front-end/src/global.scss
@@ -29,11 +29,11 @@
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
 @import '~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
-.cart-modal{
+/* .cart-modal{
     --height: 50%;
     --border-radius: 10px;
     padding: 25px;
-}
+} */
 
 .ion-color-lightblue {
     --ion-color-base: var(--ion-color-lightblue);
