--- a/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
+++ b/e-collective-front-end/src/app/cart-modal/cart-modal.page.html
@@ -1,8 +1,8 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title class="ion-text-center">Carrito de compras</ion-title>
+  <ion-toolbar class="toolbar1">
+    <ion-title>Carrito de compras</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click) = "close()" fill = "clear" color = "dark" >
+      <ion-button (click) = "close()" fill = "clear" color = "light" >
         <ion-icon name = "close" slot = "start"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -36,7 +36,19 @@
 
             <ion-col size = "6" class = "ion-align-self-center">
               <b>{{p.name}} {{p.model}}</b> <br>
-              <i>Mini descripción</i>
+              <!-- <i>Mini descripción</i> -->
+              <ion-label color="danger">
+                <p style="margin-bottom: 0px" *ngIf ="p.discount!=0"><b>₡ {{p.price - (0.01 *p.discount)*p.price}} c/IVA</b></p>
+              </ion-label>
+              <ion-label>
+                <p style="margin-bottom: 0px" *ngIf ="p.discount!=0"><s>  ₡ {{p.price}} c/IVA</s></p>
+
+                <p style="margin-bottom: 0px" *ngIf ="p.discount==0"><b>₡ {{p.price}} c/IVA</b></p>
+
+              </ion-label>
+
+
+
             </ion-col>                   
                      
             <ion-col size="3" class = "ion-align-self-center">
@@ -68,14 +80,24 @@
         </ion-grid>
 
       </ion-item>
-      <ion-item>
+      <ion-item *ngIf="carro.length === 0" lines="none">
+        El carrito de compras está vacío. 
+      </ion-item>
+      <ion-item *ngIf="carro.length > 0" lines="none">
         <ion-grid>
           <ion-row>
             <ion-col size="9">
-              Total:
+              <b>Total:</b>
             </ion-col>
             <ion-col size = "3" class = "ion-text-end">
-              {{ getTotal() | currency: '₡' }}
+              <b>{{ getTotal() | currency: '₡' }}</b>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size = "12">
+              <ion-button mode="ios" expand="full" (click)="createBuyOrder()">
+                Crear orden de compra
+              </ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
