--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true" >
-  <ion-toolbar class="toolbar1">
+  <ion-toolbar *ngIf="isDesktop" class="toolbar1">
         <ion-buttons slot="start" *ngIf="!isDesktop">
           <ion-menu-button></ion-menu-button>
         </ion-buttons>
@@ -40,7 +40,7 @@
   <ion-toolbar *ngIf="isDesktop" class="toolbar2">
     <ion-row >
       <ion-col size="12">
-        <div class="navbar" class="ion-text-center">
+        <div class="ion-text-center">
           <ion-button class="superSlim" fill="clear" mode="ios" [routerLink]="['../order-history']"  >
             <ion-label color="light">Historial de compras</ion-label>
           </ion-button>
@@ -66,11 +66,31 @@
       </ion-col>
     </ion-row>
   </ion-toolbar>
+
+  <ion-toolbar *ngIf="!isDesktop" class="toolbar1">
+    <ion-buttons slot="start" *ngIf="!isDesktop">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+
+      <a href="/home" slot="start">
+        <img src="\assets\images\e-collectiveWG.png" class="logo">
+      </a>
+
+    <ion-button style="padding-right: 10px;" slot="end" fill="clear" (click)= "abrirCarrito()" #carro>
+      <div class = "cart-lenght"> {{contadorItems | async}} </div>
+      <ion-icon name = "cart" class = "cart-icon"></ion-icon>        
+    </ion-button> 
+  </ion-toolbar>
+
+  <ion-toolbar *ngIf="!isDesktop" class="toolbar2">
+    <ion-searchbar style="width: 100%" showCancelButton="never" (ionInput)="search($event)" placeholder="Buscar marca, modelo, precio..."></ion-searchbar>
+  </ion-toolbar>
+
 </ion-header>
 
 <ion-content>     
   
-<owl-carousel-o [options]="customOptions" *ngIf=" productos.length"> 
+<owl-carousel-o [options]="customOptions" *ngIf=" productos.length && isDesktop"> 
     <ng-container *ngFor="let producto of productos">
       <ng-template carouselSlide *ngIf ="producto.discount!=0">
         <div class="slider" >
