--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -12,7 +12,7 @@
         <ion-searchbar slot = "start" placeholder="Buscar teléfonos celulares..."></ion-searchbar>
 
         <div style="display: flex; align-items: center; justify-content: center;" *ngIf="(observableUser | async) as user; else noLogin">
-          <ion-button mode="ios" fill="clear" (click)= "onClickLogin()">
+          <ion-button mode="ios" fill="clear" (click)= "onClickLogged()">
             <ion-label color="light">{{user.name}}</ion-label>
           </ion-button>
           <ion-button mode="ios" fill="clear" (click)= "onClickLogOut()">
