--- a/e-collective-front-end/src/app/order-history/order-history.page.scss
+++ b/e-collective-front-end/src/app/order-history/order-history.page.scss
@@ -26,3 +26,14 @@ ion-menu-button {
     padding-left: 30px;
     padding-right: 30px;
 }
+
+ion-card {
+    max-width: 900px; 
+    margin-right:auto;
+    margin-left: auto;
+
+}
+
+h3, h4, h5, h6 {
+    margin-bottom: 0px;
+  }
