--- a/e-collective-front-end/src/app/order-history/order-history.page.html
+++ b/e-collective-front-end/src/app/order-history/order-history.page.html
@@ -17,6 +17,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-card *ngFor="let order of buyOrders">  
+    <ion-card-header>
+      <ion-card-title>Orden de la fecha {{order.fecha.toString()}}</ion-card-title>  
+      <ion-text color="dark"><h3><b>Precio total: </b>{{order.total}}</h3></ion-text>
+
+    </ion-card-header>  
+          
+    <ion-list>  
+      <ion-item *ngFor="let producto of order.productos" lines="none">
+        <ion-thumbnail slot="start">
+          <ion-img style ="object-fit: cover;" [src]="producto.imgUrl"></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <h4><b>{{producto.name}} {{producto.model}}</b></h4>
+          <h5><b>Cantidad: </b>{{producto.quantity}}</h5>
+          <h5><b>Precio por unidad: </b>{{producto.price}}</h5>
+        </ion-label>
+
+
+
+      </ion-item>
+    </ion-list>  
+  </ion-card>
 
 </ion-content>
