[3-FrontEnd-3] Editar Perfil de Usuario
Se agrego validadores para lo campos, hay un bug con la imagen cuando se actualizan los datos.

--- a/e-collective-front-end/src/app/app.component.html
+++ b/e-collective-front-end/src/app/app.component.html
@@ -20,7 +20,7 @@
             </div> 
 
             <ion-menu-toggle>
-              <ion-button fill="clear" expand="full" mode="ios"> <!--(click)="onClickEditarPerfil()" [routerLink]="['../perfil']"-->
+              <ion-button fill="clear" expand="full" mode="ios" (click)= "onClickLogged()"> 
                 <ion-label>Editar perfil</ion-label>
               </ion-button>
             </ion-menu-toggle>
