--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -41,9 +41,12 @@
     <ion-row >
       <ion-col size="12">
         <div class="ion-text-center">
+          <ion-button class="superSlim" fill="clear" mode="ios" (click)="onClickSOAP()">
+            <ion-label color="light">SOAP</ion-label>
+          </ion-button>
           <ion-button class="superSlim" fill="clear" mode="ios" (click)="onClickHistorialCompras()">
             <ion-label color="light">Historial de compras</ion-label>
-          </ion-button>
+          </ion-button>         
           <ion-button class="superSlim" fill="clear" mode="ios" [routerLink]="['../locations']" >
             <ion-label color="light">Ubicaciones</ion-label>
           </ion-button>
