--- a/e-collective-front-end/src/app/company-form/company-form.page.html
+++ b/e-collective-front-end/src/app/company-form/company-form.page.html
@@ -10,45 +10,40 @@
     </ion-card-header>
 
     <ion-card-content>
+
+      <form [formGroup]="companyForm">
+        <ion-list>
+          <ion-item>
+            <ion-label position="floating">Nombre de la empresa *</ion-label>
+            <ion-input formControlName="nombreE"></ion-input>
+          </ion-item>
+    
+          <ion-item>
+            <ion-label position="floating">Dirección de la empresa *</ion-label>
+            <ion-input formControlName="direccion"></ion-input>
+          </ion-item>
+    
+          <ion-item>
+            <ion-label position="floating">Nombre del representante *</ion-label>
+            <ion-input formControlName="nombreR"></ion-input>
+          </ion-item>
+    
+          <ion-item>
+            <ion-label position="floating">Correo Electrónico del representante*</ion-label>
+            <ion-input formControlName="correo" type ="email"> </ion-input>
+          </ion-item>
+
+        </ion-list>
+
+      </form>
     
 
-      <ion-list>
-        <ion-item>
-          <ion-input placeholder="Nombre" formControlName="nombreE"></ion-input>
-        </ion-item>
 
-        <ion-text>
-          <p>Es necesario ingresar un nombre. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Direccion" formControlName="direccion"></ion-input>
-        </ion-item>
-  
-        <ion-text>
-          <p>Ingrese la direccion fisica de la empresa. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Nombre Representante" formControlName="nombreR"></ion-input>
-        </ion-item>
-  
-        <ion-text>
-          <p>Es necesario ingresar un representante de la empresa. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Correo Representante" formControlName="correo" type ="email"> </ion-input>
-        </ion-item>
-  
-        <ion-text>
-          <p>Es necesario ingresar un correo para el representante. </p>
-        </ion-text>
-      </ion-list>
       <ion-button 
         expand="full" 
         class="ion-margin-top"
         mode="ios"
+        (click)="onSubmit()"
       >Registrar Empresa
       </ion-button>
  
