--- a/e-collective-front-end/src/app/home/home.page.html
+++ b/e-collective-front-end/src/app/home/home.page.html
@@ -41,9 +41,6 @@
     <ion-row >
       <ion-col size="12">
         <div class="ion-text-center">
-          <ion-button class="superSlim" fill="clear" mode="ios" (click)="onClickSOAP()">
-            <ion-label color="light">SOAP</ion-label>
-          </ion-button>
           <ion-button class="superSlim" fill="clear" mode="ios" (click)="onClickHistorialCompras()">
             <ion-label color="light">Historial de compras</ion-label>
           </ion-button>         
@@ -64,6 +61,9 @@
           </ion-button>
           <ion-button class="superSlim" *ngIf = "this.usuario && (this.usuario.rol == 1 || this.usuario.rol == 2)" fill="clear" mode="ios" [routerLink]="['../admin-user']"  >
             <ion-label color="light">Administrar</ion-label>
+          </ion-button>
+          <ion-button class="superSlim" *ngIf = "this.usuario && (this.usuario.rol == 1 || this.usuario.rol == 2)" fill="clear" mode="ios" (click)="onClickSOAP()">
+            <ion-label color="light">Servicio de registro</ion-label>
           </ion-button>
         </div>
       </ion-col>
