--- a/e-collective-front-end/src/app/store-form/store-form.page.html
+++ b/e-collective-front-end/src/app/store-form/store-form.page.html
@@ -6,90 +6,44 @@
 
   <ion-card >
     <ion-card-header lines="none">
-      <ion-card-title class="ion-text-center">Registrar Tienda</ion-card-title>
+      <ion-card-title class="ion-text-center">Registrar Empresa</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-    
 
-      <ion-list>
-        <ion-item>
-          <ion-input placeholder="Nombre de la Tienda" formControlName="nombreT"></ion-input>
-        </ion-item>
-
-        <ion-text>
-          <p>Es necesario ingresar un nombre. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Empresa" formControlName="nombreE"></ion-input >
-        </ion-item>
-  
-        <ion-text>
-          <p>Nombre de la empresa a la que pertenece. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Llave de autentificacion" formControlName="llave"></ion-input>
-        </ion-item>
-  
-        <ion-text>
-          <p>Llave de autentificacion de la empresa. </p>
-        </ion-text>
-  
-        <ion-item>
-          <ion-input placeholder="Ubicacion" formControlName="direccion"></ion-input>
-        </ion-item>
-  
-        <ion-text>
-          <p>Direccion de la empresa. </p>
-        </ion-text>
-      </ion-list>
-      <!--
-      <form [formGroup]="userForm">
+      <form [formGroup]="storeForm">
         <ion-list>
           <ion-item>
-            <ion-label position="floating">Nombre completo *</ion-label>
-            <ion-input formControlName="nombre"></ion-input> 
+            <ion-label position="floating">Nombre de la empresa *</ion-label>
+            <ion-input formControlName="nombreE"></ion-input>
           </ion-item>
-    
-          <ion-text *ngIf="!userForm.get('nombre').valid && userForm.get('nombre').touched" color="danger">
-            <p>Es necesario ingresar un nombre. </p>
-          </ion-text>
     
           <ion-item>
-            <ion-label position="floating">Fecha de nacimiento *</ion-label>
-            <ion-datetime displayFormat="MM/DD/YYYY" min="1910-03-14" formControlName="fchNacimiento"></ion-datetime>
+            <ion-label position="floating">Llave que recibió en su correo tras crear la empresa *</ion-label>
+            <ion-input formControlName="llave"></ion-input>
           </ion-item>
-    
-          <ion-text *ngIf="!userForm.get('fchNacimiento').valid && userForm.get('fchNacimiento').touched" color="danger">
-            <p>Es necesario ingresar una fecha de nacimiento. </p>
-          </ion-text>
     
           <ion-item>
-            <ion-label position="floating">Correo Electrónico *</ion-label>
-            <ion-input formControlName="correo"></ion-input> 
+            <ion-label position="floating">Nombre de la tienda *</ion-label>
+            <ion-input formControlName="nombreT"></ion-input>
           </ion-item>
-    
-          <ion-text *ngIf="!userForm.get('correo').valid && userForm.get('correo').touched" color="danger">
-            <p>Es necesario ingresar un correo electrónico válido para su cuenta. </p>
-          </ion-text>
     
           <ion-item>
-            <ion-label position="floating">Contraseña *</ion-label>
-            <ion-input type="password" formControlName="contrasena"></ion-input> 
+            <ion-label position="floating">Ubicación de la tienda*</ion-label>
+            <ion-input formControlName="direccion"> </ion-input>
           </ion-item>
-    
-          <ion-text *ngIf="!userForm.get('contrasena').valid && userForm.get('contrasena').touched" color="danger">
-            <p>Es necesario ingresar una contraseña de 8 o más dígitos para su cuenta. </p>
-          </ion-text>
+
         </ion-list>
+
       </form>
-    -->
+    
+
+
       <ion-button 
         expand="full" 
         class="ion-margin-top"
         mode="ios"
+        (click)="onSubmit()"
       >Registrar Tienda
       </ion-button>
  
